Fixing errors and test failures